--- a/reel/styles.css
+++ b/reel/styles.css
@@ -141,8 +141,6 @@ ul {
 }
 
 .frame {
-  /* background-image: linear-gradient(#5e9ad9, #e271ad, white 100%); */
-  background-color: burlywood;
   width: 100%;
   /* aspect-ratio: 4/3; */
   position: relative;
@@ -156,8 +154,9 @@ img {
   bottom: 0;
   left: 0;
   right: 0;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  mix-blend-mode: multiply;
 }
