--- a/grid/styles.css
+++ b/grid/styles.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: Vazir;
+  src: url("../assets/fonts/Vazir.ttf");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: Vazir;
+  src: url("../assets/fonts/Vazir-Bold.ttf");
+  font-weight: bold;
+}
+
 /* Box sizing rules */
 *,
 *::before,
@@ -32,6 +44,8 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
+  direction: rtl;
+  font-family: "Vazir", sans-serif;
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
@@ -109,12 +123,26 @@ html {
 }
 
 .frame {
-  background-image: linear-gradient(#5e9ad9, #e271ad, white 100%);
+  background-image: linear-gradient(
+    rgb(140, 187, 240),
+    rgb(240, 140, 148),
+    white 100%
+  );
   width: 100%;
-  aspect-ratio: 4/3;
+  /* aspect-ratio: 4/3; */
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
 }
 
 img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
   width: 100%;
   height: 100%;
   object-fit: cover;
