--- a/reel/styles.css
+++ b/reel/styles.css
@@ -102,11 +102,18 @@ ul {
   display: flex;
   overflow-x: auto;
   overflow-y: hidden;
+  /* scrollbar-width: none;
+  -ms-overflow-style: none; */
   scrollbar-color: var(--color-light) var(--color-dark);
+  scrollbar-width: thin;
 }
 
+/* .card-wrapper::-webkit-scrollbar {
+  display: none;
+} */
+
 .card-wrapper::-webkit-scrollbar {
-  height: 1rem;
+  height: 0.5rem;
 }
 
 .card-wrapper::-webkit-scrollbar-track {
@@ -117,10 +124,10 @@ ul {
   background-color: var(--color-dark);
   background-image: linear-gradient(
     var(--color-dark) 0,
-    var(--color-dark) 0.25rem,
-    var(--color-light) 0.25rem,
-    var(--color-light) 0.75rem,
-    var(--color-dark) 0.75rem
+    var(--color-dark) 0.125rem,
+    var(--color-light) 0.125rem,
+    var(--color-light) 0.375rem,
+    var(--color-dark) 0.375rem
   );
 }
 
@@ -137,7 +144,12 @@ ul {
   border-radius: 0.5rem;
   box-shadow: 0.05rem 0.1rem 0.3rem -0.03rem rgba(0, 0, 0, 0.45);
   padding-bottom: 1rem;
-  flex: 0 0 40ch;
+  flex: 0 0 38ch;
+  font-size: 0.8rem;
+}
+
+.card h3 {
+  font-size: 1.15rem;
 }
 
 .card-body {
@@ -148,10 +160,6 @@ ul {
 
 .card-body > * + * {
   margin-top: 1rem;
-}
-
-.card h3 {
-  font-size: 1.25rem;
 }
 
 .frame {
